tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_normal_generic_used_when_numeric_expected_in_where_clause_1/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Type provided when a numeric generic was expected
  ┌─ src/main.nr:6:51
  │
6 │     pub fn read<T, N>() -> T where T: Deserialize<N> {
  │                                                   - the numeric generic is not of type `u32`
  │

Aborting due to 1 previous error
